--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,13 @@
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
+    //반투명 배경(흰색)
+    <style name="Theme.AppCompat.TranslucentWhite">
+        <item name="android:background">#ffffff</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
 </resources>
