--- a/app/src/main/res/layout/activity_lounge_reservation.xml
+++ b/app/src/main/res/layout/activity_lounge_reservation.xml
@@ -4,61 +4,239 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Hyunjin.Activity.LoungeReservationActivity">
+
+    <RelativeLayout
+        android:id="@+id/rl_lounge_event_eventImg"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:layout_alignParentStart="true"
+        android:background="#f9f9f9">
+
+        <ImageView
+            android:id="@+id/iv_lounge_event_search_eventImg"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:src="@drawable/rounge" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:src="@drawable/gradient" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rl_top_bar_lounge_event_innobatorclub"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#ffffff"
-        >
+        android:background="#33000000">
+
         <Button
-            android:layout_width="40dp"
-            android:layout_centerVertical="true"
             android:id="@+id/btn_lounge_reservation_back"
+            android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
-            />
+            android:layout_centerVertical="true"
+            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+
         <TextView
+            android:id="@+id/tv_lounge_eventsearch_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="#000000"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
             android:letterSpacing="0.05"
             android:lineSpacingExtra="5sp"
-            android:gravity="center_horizontal"
-            android:layout_centerInParent="true"
             android:text="INNOVATOR CLUB"
-            android:textStyle="bold"
-            />
-        <ImageView
-            android:id="@+id/iv_btn_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_horiz_black_24dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            />
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+        <!--        <ImageView
+                    android:id="@+id/iv_btn_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_more_horiz_black_24dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    />-->
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_below="@id/rl_top_bar_lounge_event_innobatorclub"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f9f9f9"
-        >
+        android:id="@+id/rl_lounge_event_title"
+        android:layout_width="328dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/rl_lounge_event_eventImg"
+        android:layout_centerInParent="true">
+
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_lounge_event_title"
+            android:layout_width="305dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#999999"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="6sp"
             android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="18.7dp"
+            android:background="#ffffff"
             android:gravity="center"
-            android:text="예약을 진행하기 위해 \n SafariㅣChrome으로 이동합니다."
-            />
+            android:letterSpacing="0.02"
+            android:lineSpacingExtra="7sp"
+            android:text="INNOVATOR CLUB | 혁신 콘서트 제목이 길어지면 이렇게 두 줄로 들어가겠죠"
+            android:textColor="#f7746b"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
     </RelativeLayout>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="328dp"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="296dp">
+
+        <RelativeLayout
+            android:id="@+id/rl_lounge_event_content"
+            android:layout_width="328dp"
+            android:layout_height="644dp"
+            android:layout_below="@+id/rl_lounge_event_title"
+            android:layout_centerInParent="true"
+            android:background="#ffffff">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="9sp"
+                android:text="일정 | "
+                android:textColor="#222222"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_lounge_event_detail_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="25dp"
+                android:text="2019. 04. 13 - 2019. 04. 14" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="55dp"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="9sp"
+                android:text="시간 | "
+                android:textColor="#222222"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_lounge_event_detail_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="80dp"
+                android:text="양일 각 12:00 - 17:00" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="110dp"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="9sp"
+                android:text="장소 | "
+                android:textColor="#222222"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_lounge_detail_place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="135dp"
+                android:text="서울혁신파크" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="165dp"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="9sp"
+                android:text="가격 | "
+                android:textColor="#222222"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_lounge_detail_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="190dp"
+                android:text="30,000 원" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="220dp"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="9sp"
+                android:text="프로그램 | "
+                android:textColor="#222222"
+                android:textSize="15sp" />
+
+            <RelativeLayout
+                android:id="@+id/rl_lounge_detail_program"
+                android:layout_width="314dp"
+                android:layout_height="284dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="250dp">
+
+                <ImageView
+                    android:id="@+id/iv_rl_lounge_detail_program"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/btn_lounge_event_detail_join"
+                android:visibility="visible"
+                android:layout_marginTop="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@drawable/bt_join"
+                android:layout_below="@+id/rl_lounge_detail_program"
+                >
+            </ImageView>
+            <RelativeLayout
+                android:id="@+id/btn_lounge_event_detail_waiting"
+                android:visibility="invisible"
+                android:layout_marginTop="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@drawable/bt_join_waiting"
+                android:layout_below="@+id/rl_lounge_detail_program"
+                >
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/btn_lounge_event_detail_complete"
+                android:visibility="invisible"
+                android:layout_marginTop="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_below="@+id/rl_lounge_detail_program"
+                >
+                <ImageView
+                    android:id="@+id/iv_lounge_event_detail_complete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bt_join_complete"
+                    />
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
