--- a/app/src/main/res/layout/fragement_lounge_event.xml
+++ b/app/src/main/res/layout/fragement_lounge_event.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".Hyunjin.Fragment.LoungeEventFragment">
-    <android.support.v7.widget.RecyclerView
+<!--    <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_lounge_frag_lounge_event_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         >
-    </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>-->
 </android.support.constraint.ConstraintLayout>
