--- a/app/src/main/res/layout/fragment_lounge.xml
+++ b/app/src/main/res/layout/fragment_lounge.xml
@@ -27,52 +27,60 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
+    <LinearLayout
+        android:background="#ffffff"
+        android:layout_width="191dp"
+        android:layout_height="160dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="96dp"
+        android:layout_marginLeft="26dp"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#f7746b"
+            android:lineSpacingExtra="2sp"
+            android:gravity="center_horizontal"
+            android:textStyle="bold"
+            android:text="CLUB"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="28dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="#000000"
+            android:letterSpacing="-0.01"
+            android:lineSpacingExtra="7sp"
+            android:layout_marginLeft="19.5dp"
+            android:layout_marginTop="16dp"
+            android:text="관심 있는 클럽에 가입 해
+멤버들과 더욱 긴밀한 교류를
+경험해 보세요."
+            />
+    </LinearLayout>
+
+    <RelativeLayout
             android:id="@+id/iv_rv_item_lounge_image"
             android:layout_width="match_parent"
-            android:layout_height="258dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/rl_top_bar_lounge"
-            android:layout_marginTop="8dp"
-            android:background="#ffffff">
+            >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_lounge_frag_lounge_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"></android.support.v7.widget.RecyclerView>
+                android:layout_centerVertical="true">
+
+            </android.support.v7.widget.RecyclerView>
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="99dp"
-            android:layout_below="@id/iv_rv_item_lounge_image"
-            android:background="#ffffff">
-
-            <TextView
-                android:id="@+id/tv_rounge_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="17dp"
-                android:layout_marginTop="15dp"
-                android:gravity="center_horizontal"
-                android:lineSpacingExtra="2sp"
-                android:text="CLUB"
-                android:textColor="#b0caea"
-                android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_rounge_content"
-                android:layout_marginLeft="17dp"
-                android:layout_marginTop="3dp"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="7sp"
-                android:text="관심 있는 클럽에 가입 해
-멤버들과 더욱 긴밀한 교류를 해 보세요."
-                android:textColor="#999999"
-                android:textSize="13sp" />
-        </RelativeLayout>
     </RelativeLayout>
