ChatActivity Resize and EditText setText("") after send message

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -61,6 +61,7 @@
         android:layout_alignParentBottom="true"
         >
         <EditText
+            android:id="@+id/chat_message_edit"
             android:layout_width="283dp"
             android:layout_height="32dp"
             android:background="@drawable/box_textfleld"
