add api to 카테고리별 검색(추천순&최신순) //검색 알고리즘 개꼬임 아무도 머지하지말아라

--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -146,6 +146,7 @@
 
 
     <RelativeLayout
+
         android:id="@+id/ll_home_board_board_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -156,7 +157,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_item_board_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -169,7 +172,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="9.5dp"
         android:background="#FFFFFF"
-        android:orientation="vertical">
+        android:orientation="vertical">''
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_item_board_list_for_search"
