--- a/app/src/main/res/layout/item_board_image.xml
+++ b/app/src/main/res/layout/item_board_image.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="101dp"
+    android:layout_height="101dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
+    android:background="@drawable/image_background"
     >
     <ImageView
         android:id="@+id/item_board_img"
@@ -15,12 +16,10 @@
 
     <Button
         android:id="@+id/item_image_board_delete_btn"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/image_x_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/bt_x"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
         />
 
 </RelativeLayout>
