--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,8 +45,8 @@
         android:id="@+id/et_login_id"
         android:layout_marginLeft="32dp"
         android:textSize="14dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
         android:hint="gingsdesign@gmail.com"/>
     </LinearLayout>
     <LinearLayout
@@ -73,8 +73,8 @@
             android:background="@null"
             android:id="@+id/et_login_pw"
             android:layout_marginLeft="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
             android:inputType="textPassword"
             android:hint="**********"/>
     </LinearLayout>
