--- a/app/src/main/res/layout/activity_mypage_update.xml
+++ b/app/src/main/res/layout/activity_mypage_update.xml
@@ -74,14 +74,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="151dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mypage_update_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="70dp"
+            android:layout_marginBottom="20.1dp"
+            android:background="@color/transparent"
+            >
 
         </android.support.v7.widget.RecyclerView>
         <View
@@ -105,23 +108,7 @@
                 android:background="@drawable/ic_image"
                 />
 
-            <Button
-                android:id="@+id/mypage_update_camera_btn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/bt_camera"
-                />
 
-            <Button
-                android:id="@+id/mypage_test_btn"
-                android:layout_width="80dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="20dp"
-                android:layout_gravity="center"
-                android:text="테스트"
-                />
 
         </LinearLayout>
 
