--- a/app/src/main/res/layout/activity_sign_up1.xml
+++ b/app/src/main/res/layout/activity_sign_up1.xml
@@ -47,10 +47,12 @@
 
         <TextView
             android:background="@drawable/back"
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="80dp"
             android:text="내용을입력하세요용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을내용을입력하세요~내용을내용을입력하세요~내용을내용을입력하세요~내용을내용을입력하세요~내용을~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~"
             android:layout_centerInParent="true"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
         />
 
         </ScrollView>
