--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -248,18 +248,18 @@
             <RelativeLayout
                 android:id="@+id/rl_item_board_like"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@id/rl_item_board_comment"
                 android:layout_marginRight="15.7dp"
                 >
 
                 <ImageView
-                    android:id="@+id/iv_item_board_like"
+                    android:id="@+id/iv_item_like_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
                     android:layout_marginTop="0dp"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_like" />
 
                 <TextView
@@ -280,7 +280,7 @@
             <RelativeLayout
                 android:id="@+id/rl_item_board_comment"
                 android:layout_width="42.7dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10.3dp"
                 android:layout_toLeftOf="@id/iv_item_board_share">
@@ -289,7 +289,9 @@
                     android:id="@+id/iv_item_board_comment"
                     android:layout_width="13.6dp"
                     android:layout_height="13.6dp"
-                    android:src="@drawable/ic_reple" />
+                    android:src="@drawable/ic_reple"
+                    android:layout_centerVertical="true"
+                    />
 
                 <TextView
                     android:id="@+id/tv_item_board_comment_cnt"
