--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -91,8 +91,6 @@
             </LinearLayout>
         </RelativeLayout>
 
-
-
         <TextView
             android:id="@+id/tv_item_board_time"
             android:layout_width="wrap_content"
@@ -116,13 +114,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/iv_item_board_contents_image_viewpager"
+        <RelativeLayout
+            android:id="@+id/item_board_img_layout"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
-            android:background="@color/colorPrimary"
+            android:layout_height="match_parent"
             >
-        </android.support.v4.view.ViewPager>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/iv_item_board_contents_image_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:background="@color/colorPrimary"
+                >
+            </android.support.v4.view.ViewPager>
+
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -143,18 +149,6 @@
                     android:text="안녕하세요ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ오안녕하세요 키이이이 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오"
                     android:textColor="#000000" />
 
-                <TextView
-                    android:id="@+id/tv_item_board_contents_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_item_board_contents_text"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="0dp"
-                    android:letterSpacing="-0.01"
-                    android:lineSpacingExtra="6sp"
-                    android:text="더보기"
-                    android:textColor="#a7a7a7"
-                    android:textSize="10sp" />
             </RelativeLayout>
         </RelativeLayout>
 
